manifests/monitoring/prometheus/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
    component: server
  name: prometheus-server
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9090
  selector:
    app: prometheus
    component: server
  type: ClusterIP
